# Constrails

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IDENTITY.md  Makefile  README.md  RELEASE.md  SECURITY-AUDIT.md  SECURITY.md  USER.md  alembic.ini  publish_prerelease.sh  pyproject.toml  test_broker2.py  test_import.py  test_kernel_import.py
.github/: release-checklist.md
.github/release-notes/: 0.1.0-alpha.md  1.0.0.md
.github/workflows/: ci.yml
archive/obsolete-tests/: test_broker.py  test_kernel_integration.py
deploy/: README.md
deploy/compose/: .env.example  docker-compose.yml
docs/: architecture.md  ga-checklist.md  known-limitations.md  operations-guide.md  production-deployment.md  project.md  security-roadmap.md  support-matrix.md  threat-model.md
migrations/: env.py  script.py.mako
migrations/versions/: 5eb096cebe84_baseline.py
policies/: README.md  tool_risk_profiles.json
policies/capabilities/: dev-agent.json
policies/examples/: input-example.json
policies/rego/: README.md
policies/rego/constrail/: allow.rego  approval.rego  deny.rego  sandbox.rego
scripts/: opa_smoke.py  run_compose_opa_smoke.sh
src/constrail/: __init__.py  admin_models.py  approval.py  approval_models.py  audit_checkpoint.py  audit_verify.py  auth.py  capability_store.py  cli.py  config.py  database.py  db_migrate.py  kernel.py  kernel_v2.py  metrics.py  models.py  rate_limits.py  sandbox.py  sandbox_records.py
src/constrail/adapters/: __init__.py  base.py  exec.py  filesystem.py  http.py
src/constrail/capability/: manager.py
src/constrail/policy/: policy_engine.py
src/constrail/risk/: risk_engine.py
src/constrail/tool_broker/: broker.py
tests/: README.md  test_admin_endpoints.py  test_admin_metrics.py  test_admin_quotas.py  test_admin_scope.py  test_api.py  test_approval_binding.py  test_approval_flow.py  test_approval_webhooks.py  test_approval_worker.py  test_audit_auth_metadata.py  test_audit_chain.py  test_audit_checkpoint.py  test_audit_verify.py  test_auth.py  test_batch_d_validation.py  test_broker_and_adapters.py  test_capability_constraints.py  test_capability_store.py  test_cli.py  test_cli_admin.py  test_cli_approval.py  test_cli_auth.py  test_cli_capability.py  test_cli_db.py  test_cli_json.py  test_cli_sandbox.py  test_db_migrate.py  test_exec_adapter.py  test_exfiltration_chain.py  test_kernel_spine.py  test_metrics_prometheus.py  test_policy_engine.py  test_policy_engine_opa.py  test_quota_events.py  test_quota_summary.py  test_rate_limits.py  test_sandbox_flow.py  test_sandbox_selection.py  test_sandbox_strict_mode.py
